--- a/app/src/main/res/layout/activity_search__rxcui.xml
+++ b/app/src/main/res/layout/activity_search__rxcui.xml
@@ -19,26 +19,49 @@
         android:id="@+id/status_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:textSize="20sp"
         android:background="@android:color/holo_blue_dark"
+        android:padding="8dp"
         android:text="Status: No search is being made..."
         android:textColor="@android:color/white"
-        />
+        android:textSize="20sp" />
 
-    <ScrollView
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:background="@android:color/holo_green_light">
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/drug_info_result"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:textSize="16sp"
+                android:textColor="@android:color/white"/>
+
+        </ScrollView>
 
         <TextView
-            android:id="@+id/drug_info_result"
-            android:layout_width="match_parent"
+            android:id="@+id/rxcui_search_error"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@android:color/holo_green_dark"
+            android:visibility="invisible"
+            android:text="@string/rxcui_search_error"
+            android:textSize="18sp"
             android:padding="8dp"
-            android:text="Your result appears here..."
-            android:textSize="16sp"
-            android:textColor="@android:color/white"/>
-    </ScrollView>
+            android:textColor="@android:color/holo_red_dark"/>
+
+        <ProgressBar
+            android:id="@+id/rxcui_query_loading_indicator"
+            android:layout_width="42dp"
+            android:layout_height="42dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="26dp"
+            android:visibility="invisible" />
+
+</FrameLayout>
 
 </LinearLayout>
